==== librsvg 1.1.2 ====

2002-02-04  Darin Adler  <darin@bentspoon.com>

	* NEWS: Release notes for 1.1.2.
	* configure.in: Bump version number, give better error message
	when popt is missing.

2002-02-01  Laszlo Peter  <laca@ireland.sun.com>

	*  rsvg-bpath-util.c rsvg-bpath-util.h rsvg-css.c rsvg-css.c
	   rsvg-defs.c rsvg-paint-server.c rsvg-path.c rsvg-path.h
	   rsvg.c rsvg.h test-rsvg.c: correct licensing information
           in the headers by permission of the Copyright holder.

2002-01-21  Alex Larsson  <alexl@redhat.com>

	* rsvg.c (rsvg_render_bpath):
	Use the new libart intersector.

==== librsvg 1.1.1 ====

2002-01-08  Darin Adler  <darin@bentspoon.com>

	* NEWS: Release notes for 1.1.1.

2002-01-04  Darin Adler  <darin@bentspoon.com>

	* README:
	* configure.in:
	* librsvg.spec.in:
	More tweaking. I just can't stop myself.

2002-01-04  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump required libart version to the one
	with art_render_mask.

2002-01-04  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump version, update dependencies.
	* librsvg-2.0.pc.in: Update dependencies.

	* rsvg-bpath-util.c:
	* rsvg-css.c:
	* rsvg-css.h:
	* rsvg-defs.c:
	* rsvg-paint-server.c:
	* rsvg-paint-server.h:
	* rsvg-path.c:
	* rsvg-path.h:
	* rsvg.c:
	Fix includes to include only what's needed.

	* test-62699.svg: Add a test case for another bug.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* rsvg.c: Use art_render_mask in libart.

	* Makefile.am:
	* art_render_mask.c: Remove.
	* art_render_mask.h: Remove.
	Get rid of our own copy of art_render_mask.

	* configure.in: Change back so compatible with older autoconf
	and automake. We'll go back to the future when glib does.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* acinclude.m4: Remove.
	We don't need the NAUTILUS_FREETYPE2 macro any more.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* TODO:
	* test-rsvg.c: (main):
	Some cleanup on the test program.

	* configure.in: