@@ -1,3 +1,11 @@
+2002-02-08  Anders Carlsson  <andersca@gnu.org>
+
+	* rsvg.c (rsvg_pixmap_destroy): Add from GNOME 1 version.
+	(rsvg_start_svg): Use rsvg_pixmap_destroy as finalize function.
+	(rsvg_push_opacity_group): Likewise.
+	(rsvg_pixbuf_from_file_at_size): Call rsvg_handle_close.
+	(rsvg_pixbuf_from_file_at_zoom): Likewise.
+
 ==== librsvg 1.1.2 ====
 
 2002-02-04  Darin Adler  <darin@bentspoon.com>
